<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sansey</groupId>
	<artifactId>tic-tac-toe</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>Tic-tac-toe game</name>
	<description>An attempt to write game with OOP ideas in mind</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
		<pmdVersion>6.23.0</pmdVersion>
	</properties>

	<!-- Specifies project source code only dependencies -->
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.6.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<consoleOutput>true</consoleOutput>
					<encoding>UTF-8</encoding>
					<logViolationsToConsole>true</logViolationsToConsole>
					<failsOnError>true</failsOnError>
					<linkXRef>false</linkXRef>
				</configuration>
				<executions>
					<execution>
						<id>validate with google_checks</id>
						<configuration>
							<!-- Use Google checks ruleset instead of Sun checks (sun_checks.xml) -->
							<configLocation>google_checks.xml</configLocation>
						</configuration>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
					<execution>
						<id>validate with sun_checks</id>
						<configuration>
							<!-- Use Sun checks ruleset -->
							<configLocation>sun_checks.xml</configLocation>
						</configuration>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<linkXRef>false</linkXRef>
					<!-- failOnViolation is actually true by default, but can be disabled -->
					<failOnViolation>true</failOnViolation>
					<!-- printFailingErrors is pretty useful -->
					<printFailingErrors>true</printFailingErrors>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-core</artifactId>
						<version>${pmdVersion}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-java</artifactId>
						<version>${pmdVersion}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<!-- Used to run JUnit5 tests with Java modules -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
						@{argLine} 
						--add-opens com.sansey.tictactoe/com.sansey.tictactoe=ALL-UNNAMED
						--add-opens com.sansey.tictactoe/com.sansey.tictactoe.checks=ALL-UNNAMED
						--add-opens com.sansey.tictactoe/com.sansey.tictactoe.matrices=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<configuration>
					<rules>
						<rule>
							<element>BUNDLE</element>
							<limits>
								<limit>
									<counter>INSTRUCTION</counter>
									<value>COVEREDRATIO</value>
									<minimum>1.00</minimum>
								</limit>
								<limit>
									<counter>CLASS</counter>
									<value>MISSEDCOUNT</value>
									<maximum>0</maximum>
								</limit>
							</limits>
						</rule>
					</rules>
					<excludes>
						<exclude>com/sansey/tictactoe/Main.class</exclude>
						<exclude>com/sansey/tictactoe/ConsoleTicTacToe.class</exclude>
					</excludes>
				</configuration>
				<executions>
					<!-- You'll get 'Skipping JaCoCo execution due to missing execution 
						data /target/jacoco.exec' message until first JUnit test-case class is created -->
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<!-- attached to Maven test phase -->
					<execution>
						<id>report and check</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>